<resources>
    <string name="app_name">和校园</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="modify_success">修改成功</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册账户</string>
    <string name="title_reset">重置密码</string>
    <string name="title_forget">忘记密码</string>
    <string name="title_message">消息</string>
    <string name="title_contact">通讯录</string>
    <string name="title_jzh">家长荟</string>
    <string name="title_me">我</string>
    <string name="title_chat">对话</string>
    <string name="title_create_group">创建班级</string>
    <string name="title_search_group">查找班级</string>
    <string name="title_search_person">查找好友</string>
    <string name="title_select_school">选择学校</string>
    <string name="title_account_info">我的资料</string>
    <string name="title_account_password">修改密码</string>
    <string name="title_account_apply_teacher">申请教师</string>
    <string name="title_clazz_my_nick">群名片</string>
    <string name="title_clazz_my_nick_edit">编辑群名片</string>
    <string name="title_clazz_set">群组设置</string>
    <string name="title_clazz_info">班级资料</string>
    <string name="title_clazz_avatar">编辑群头像</string>
    <string name="title_clazz_name">编辑群名称</string>
    <string name="title_clazz_manage">群管理</string>
    <string name="title_join_clazz">加入班级</string>
    <string name="title_clazz_member">班级成员</string>
    <string name="title_clazz_member_apply">待审核成员</string>
    <string name="title_invite_friend">邀请好友</string>
    <string name="title_my_payment">我的缴费</string>
    <string name="title_clazz_payment">班级缴费</string>
    <string name="title_payment_type">缴费类型选择</string>
    <string name="title_person_info">个人资料</string>
    <string name="title_person_info_edit">编辑个人资料</string>
    <string name="title_opinion">意见</string>
    <string name="title_detail">详情</string>
    <string name="title_grade_detail">成绩详情</string>
    <string name="title_clazz_choose">选择班级</string>
    <string name="hint_input_phone">请输入手机号码</string>
    <string name="hint_input_phone_code">请输入手机验证码</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_re_password">请再一次输入密码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_renew_password">请再次输入新密码</string>
    <string name="hint_search_friend">请输入名称、手机号</string>
    <string name="hint_search_group">请输入群名称、群号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="area_key">地区</string>
    <string name="area_value">目前仅限南京地区</string>
    <string name="phone">手机号码</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="password_forget">忘记密码？</string>
    <string name="other_login">其他方式登录</string>
    <string name="we_have_send_sms">验证码已发送成功！</string>
    <string name="empty_username_password">用户名和密码不能为空</string>
    <string name="error_username_password">用户名或密码不正确</string>
    <string name="alter_password">修改密码</string>
    <string name="input_sms_code">输入验证码</string>
    <string name="not_receive_sms_code">没有收到验证码？</string>
    <string name="decide_alter_password">请修改初始密码，以确保用户信息安全</string>
    <string name="OK">进入系统</string>
    <string name="login_btn_words">登录</string>
    <string name="logout">退出登录</string>
    <string name="finish">完成</string>
    <string name="search">搜索</string>
    <string name="tab_txt_message">消息</string>
    <string name="tab_txt_jx">家校互动</string>
    <string name="tab_txt_contact">联系人</string>
    <string name="tab_txt_app">应用</string>
    <string name="tab_txt_me">我</string>
    <string name="tab_txt_clazz">班级＋</string>
    <string name="tab_txt_person">个人中心</string>
    <string name="mm_title_add_group">添加班级</string>
    <string name="mm_title_add_friend">添加好友</string>
    <string name="mm_title_group_config_plus">创建班级</string>
    <string name="mm_title_group_config_search">查找班级</string>
    <string name="mm_title_group_config_set">班级设置</string>
    <string name="reset_the_password">密码重置</string>
    <string name="enter_new_password">请确认新密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="choose_photo">选择图片</string>
    <string name="no_chat">当前没有聊天记录\n请点击右上角“发起”开始即时互动</string>
    <string name="CANCEL">取消</string>
    <string name="fill_sms_code">填写注册信息</string>
    <string name="input_name">请输入昵称</string>
    <string name="input_passsword">请输入密码</string>
    <string name="input_password2">请确认密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="smscode_null">验证码不能为空</string>
    <string name="name_null">用户名不能为空</string>
    <string name="password_null">密码不能为空</string>
    <string name="verifypassword_null">确认密码不能为空</string>
    <string name="password_inconformity">确认密码与密码不一致！</string>
    <string name="join_clazz_school">南京学大教育专修学校（北京东路校区）</string>
    <string name="join_clazz_quit">退出本学校</string>
    <string name="join_clazz_primary">小升初名校冲刺班</string>
    <string name="join_clazz_junior">初三全科班</string>
    <string name="join_clazz_examination">中考名校冲刺班</string>
    <string name="join_clazz_senior">高三全科班</string>
    <string name="join_clazz">加入班级</string>
    <string name="jf_jfgz">积分规则</string>
    <string name="Set_pwd">修改密码</string>
    <string name="Set_flush">清空缓存</string>
    <string name="Set_version">新版本检测</string>
    <string name="Set_about">关于我们</string>
    <string name="Set_resp">反馈意见</string>
    <string name="Set_help">帮助中心</string>
    <string name="me_ic_pwd">修改密码</string>
    <string name="me_ic_pay">我的缴费</string>
    <string name="me_ic_version">版本更新</string>
    <string name="me_ic_about">关于我们</string>
    <string name="account_name">姓名</string>
    <string name="version_name">小课桌</string>
    <string name="can_not_find_version_name">小课桌</string>
    <string name="input_old_passsword">请输入原密码</string>
    <string name="input_new_passsword">请输入新密码</string>
    <string name="input_re_password">请确认新密码</string>
    <string name="message_ticker_format">%s的消息</string>
    <string name="jslt">即时聊天</string>
    <string name="jslt_empty">没有会话记录</string>
    <string name="new_friend">新的朋友</string>
    <string name="pic">[图片]</string>
    <string name="audio">[语音]</string>
    <string name="sd_card_unavaiable">sd卡不可用</string>
    <string name="chat_vodio_dialog_up">手指上滑，取消发送</string>
    <string name="chat_vodio_dialog_down">松开手指，取消发送</string>
    <string name="chat_hislist">选择</string>
    <string name="photo">图片</string>
    <string name="complete">完成</string>
    <string name="register_finish">您已注册成功!</string>
    <string name="register_finish_2">您可以完善资料，或者到处转转</string>
    <string name="title_activity_search_school">SearchSchoolActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_tips_head">登录帐号为您的手机号码或原校讯通帐号，如果您忘记或不知道密码，请点击</string>
    <string name="login_tips_tail">获取密码</string>
    <string name="pop_cancel">取消</string>
    <string name="pop_report">举报</string>
    <string name="pop_exitgroup">退出该群</string>
    <string name="newapp">新的应用</string>
    <string name="appinstalled">已经安装的应用</string>
    <string name="download">下载</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_homework_list">HomeworkListActivity</string>
    <string name="title_activity_create_homework">CreateHomeworkActivity</string>
    <string name="add_pic">添加图片</string>
    <string name="today_atten">今日考勤：</string>
    <string name="total_human">总人数</string>
    <string name="ren_leave">人请假</string>
    <string name="ren_no_atten">人缺勤</string>
    <string name="atten_confirm"> 确认考勤</string>
    <string name="atten_history">考勤记录</string>
    <string name="human">人</string>
    <string name="ask_for_leave">请假</string>
    <string name="cancel_ask_for_leave">取消请假</string>
    <string name="no_atten">缺勤</string>
    <string name="cancel_no_atten">取消缺勤</string>
    <string name="atten_call">打电话</string>
    <string name="no_manage_class">暂时没有管理的班级</string>
    <string name="no_atten_info">暂时没有班级考勤信息</string>
    <string name="upload_atten_sucess">考勤确认成功</string>
    <string name="no_search_data">没有满足条件的数据</string>
    <string name="atten_photo">考勤照片</string>
    <string name="retake_photo">重新拍照</string>
    <string name="del_photo">删除照片</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">yyyy年MM月</string>
    <string name="tips">提示</string>
    <string name="tips_detail">提示信息详细内容</string>
    <string name="tips_reject">您的账号已在另一个客户端上登录。如非本人操作，则密码可能已泄露，建议及时修改密码或联系客服。</string>
    <string name="tips_disconnect">网络异常，与服务器的连接断开！！</string>
    <string name="confirm">确 认</string>
    <string name="take_photo">拍照</string>
    <string name="ablum">相册</string>
    <string name="max_photo">最多只能添加8张图片，点击图片可以编辑当前已选择的图片</string>
    <string name="share_input_tip">您还可以输入%1$s个字</string>
    <string name="no_class_pic">没有管理的班级，暂时无法编辑考勤信息</string>
    <string name="friend_info">好友资料</string>
    <string name="delete">删除</string>
    <string name="sports_title">运动</string>
    <string name="daily_exercise">日常锻炼</string>
    <string name="standard_test">达标测试</string>
    <string name="distance_run">定距跑步</string>
    <string name="path_pattern">路径模式</string>
    <string name="ranking_list">排行榜</string>
    <string name="sports_log">运动日志</string>
    <string name="all_test">全部测试</string>
    <string name="single_test">单项测试</string>
    <string name="test_standard">考核标准</string>
    <string name="intelligence_test">智能测试</string>
    <string name="map_prompt_text">该测试基于手机位置信息，存在一定的误差，模拟测试结果仅供参考。</string>
    <string name="time_start_text">开始</string>
    <string name="time_end_text">结束</string>
    <string name="chronometer_text">00:00:00</string>
    <string name="start_time_text">开始时间：</string>
    <string name="end_time_text">结束时间：</string>
    <string name="signal_strength_text">信号强度：</string>
    <string name="wonder_exercise">精彩活动</string>
    <string name="today_topic">今日话题</string>
    <string name="created_at_beautify_sec">秒</string>
    <string name="created_at_beautify_min">分</string>
    <string name="created_at_beautify_hour">小时</string>
    <string name="created_at_beautify_day">天</string>
    <string name="created_at_beautify_suffix">前</string>
    <string name="input_limit">你输入的字数已经超过了限制哦！</string>
            <string name="publish">发表</string>
    <string name="talk_what">有什么事情告诉大家？</string>
    <string name="total_word">您还可以输入%1$d个字</string>
    <string name="publish_to_class">发到本班</string>
    <string name="write_tale">写说说</string>
    <string name="talk_all">全部</string>
    <string name="confirm_quit_edit_talk">您正在编辑说说，确认退出吗？</string>
    <string name="quit_talk">退出</string>
    <string name="make_video">拍视频</string>
    <string name="send_range">发送范围</string>
    <string name="confirm_del_video">您确认删除吗？</string>
        <string name="not_download">未下载:</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
</resources>