<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <include layout="@layout/include_head" />
	<RelativeLayout 
	    android:layout_below="@+id/relativelayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dip"
	    android:paddingLeft="20dip"
	    android:paddingRight="20dip">
	    <RelativeLayout 
	        android:id="@+id/layout_area"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip">
	        <TextView android:id="@+id/input_username_words"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:gravity="center_horizontal"
	            android:text="@string/we_have_send_sms"
	            android:textSize="15sp"
	            android:textStyle="bold"
	            android:textColor="@color/black"/>
		</RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/layout_sms_code"
	        android:layout_below="@+id/layout_area"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:layout_marginTop="5dip">
	        <EditText
	            android:id="@+id/input_sms_code"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:paddingLeft="10dip"
	            android:layout_marginBottom="2dip"
	            android:textSize="18sp"
	            android:singleLine="true"
	            android:gravity="center"
	            android:textColor="@color/black"
	            android:background="@null"
	            android:hint="@string/input_sms_code"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:nextFocusDown="@+id/input_password"/>
	        <ImageView 
	            android:background="@color/black" 
	            android:layout_width="fill_parent" 
	            android:layout_height="1px"
	            android:layout_alignParentBottom="true"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/layout_not_receive"
	        android:layout_below="@+id/layout_sms_code"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip">
	        <TextView 
	            android:id="@+id/not_receive"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/not_receive_sms_code"
	            android:layout_alignParentRight="true"
	            android:textSize="16sp"
	            android:textColor="@color/blue"/>
	    </RelativeLayout>	        
		<RelativeLayout 
	        android:id="@+id/layout_hint"
	        android:layout_below="@id/layout_not_receive"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip">
	        <TextView android:id="@+id/hint_alter_password"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:gravity="center_horizontal"
	            android:text="@string/decide_alter_password"
	            android:textSize="15sp"
	            android:textStyle="bold"
	            android:textColor="@color/black"/>
		</RelativeLayout>
		<RelativeLayout 
	        android:id="@+id/layout_password"
	        android:layout_below="@+id/layout_hint"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:layout_marginTop="10dip">
	        <EditText
	            android:id="@+id/input_password"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:paddingLeft="10dip"
	            android:layout_marginBottom="2dip"
	            android:textSize="18sp"
	            android:singleLine="true"
	            android:gravity="center"
	            android:textColor="@color/black"
	            android:background="@null"
	            android:hint="@string/hint_input_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/verify_password"/>
	        <ImageView 
	            android:background="@color/black" 
	            android:layout_width="fill_parent" 
	            android:layout_height="1px"
	            android:layout_alignParentBottom="true"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/layout_verify_password"
	        android:layout_below="@+id/layout_password"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:layout_marginTop="10dip">
	        <EditText
	            android:id="@+id/verify_password"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:paddingLeft="10dip"
	            android:layout_marginBottom="2dip"
	            android:textSize="18sp"
	            android:singleLine="true"
	            android:gravity="center"
	            android:textColor="@color/black"
	            android:background="@null"
	            android:hint="@string/hint_input_renew_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
	        <ImageView 
	            android:background="@color/black" 
	            android:layout_width="fill_parent" 
	            android:layout_height="1px"
	            android:layout_alignParentBottom="true"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/layout_enter"
	        android:layout_below="@+id/layout_verify_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="40dip">
	        <Button 
	            android:id="@+id/enter_system"
	            android:layout_width="fill_parent"
	            android:layout_height="40dip"
	            android:background="@drawable/button_blue"
	            android:text="@string/OK"
	            android:layout_centerInParent="true"
	            android:textSize="18sp"
	            android:textStyle="bold"
	            android:textColor="@color/white"/>
	    </RelativeLayout>
	</RelativeLayout>

</RelativeLayout>
